# hekate-math

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
.github/workflows/: ci.yml
benches/: basis_conversion.rs  field_ops.rs  poly_arithmetic.rs  promote.rs  spmv.rs
src/: constants.rs  field.rs  hardware.rs  lib.rs  matrix.rs  packable.rs
src/towers/: bit.rs  block128.rs  block16.rs  block256.rs  block32.rs  block64.rs  block8.rs  mod.rs
tests/: algebraic_prop.rs  matrix_gen.rs  serialization.rs  spmv_bench.rs
